# babel

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  qt.conf  setup_unix.sh
client/clientSocket/: QtDataSocket.cpp  QtDataSocket.hpp  QtSocket.cpp  QtSocket.hpp
client/clientUI/chatScreen/: CCallManager.cpp  CCallManager.hpp  ContactInfo.cpp  ContactInfo.hpp  chatScreen.pro  chatScreen.pro.user.c5b7cab.22  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp.bak
client/clientUI/chatScreen/build-chatScreen-Desktop-Debug/: Makefile  ui_chatwindow.h
client/clientUI/loginScreen/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client/clientUI/loginScreen/build-ClientUi-Desktop-Debug/: ClientUi  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
client/clientUI/signInScreen/: signInScreen.pro  signinscreen.cpp  signinscreen.h  signinscreen.ui
client/include/opus/: COpus.hpp  IOpus.hpp
client/include/portAudio/: CAudio.hpp  IAudio.hpp
client/src/: main.cpp
client/src/opus/: COpus.cpp
client/src/portAudio/: CAudio.cpp
common/: ISerializable.hpp  JsonUtility.cpp  JsonUtility.hpp
common/client/: CAUser.cpp  CAUser.hpp
common/protocol/: AProtocol.cpp  AProtocol.hpp  IProtocol.hpp
files/: createDB.sql  database.db  server_config.json
server/: main.cpp
server/clients/: CServerClient.cpp  CServerClient.hpp  CUdpClient.cpp  CUdpClient.hpp
server/file_management/: CFileManager.cpp  CFileManager.hpp  CSQLite.cpp  CSQLite.hpp  IFileManager.hpp
server/server/include/: CCommandHandler.hpp  CServer.hpp  CTcpConnection.hpp  CTcpServer.hpp  CUdpServer.hpp  IServer.hpp
server/server/src/: CCommandHandler.cpp  CServer.cpp  CTcpConnection.cpp  CTcpServer.cpp  CUdpServer.cpp
tests/: unit_tests.cpp
